# ampersand

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ampersand/: define_constexpr.hpp  diopter.hpp  meta.hpp
ampersand/diopter/: CMakeLists.txt  component.hpp  component_traits.hpp  condition.hpp  declare.hpp  describe.hpp  describer.hpp  describer_trait.hpp  function.cpp  function.hpp  impl.cpp  impl.hpp  loop.hpp  loop_header.hpp  object.cpp  object.hpp  operand.cpp  operand.hpp  operand_impl.cpp  operand_impl.hpp  operation.cpp  operation.hpp  operation_impl.cpp  operation_impl.hpp  scope.cpp  scope.hpp  script.cpp  script.hpp  stack.cpp  stack.hpp  symbol.cpp  symbol.hpp  symbol_result.cpp  symbol_result.hpp  syntax.cpp  syntax.hpp  syntax_impl.cpp  syntax_impl.hpp  type.cpp  type.hpp  (+13 more)
ampersand/diopter/describe/: function.hpp
ampersand/diopter/engine/: CMakeLists.txt  object.cpp  object.hpp  object_impl.cpp  object_impl.hpp  symbol_impl.hpp  type.cpp  type.hpp  type_impl.cpp  type_impl.hpp
ampersand/diopter/syntax/: syntax.cpp  syntax.hpp  syntax_element.cpp  syntax_element.hpp  syntax_element_constant.hpp  syntax_element_declare.hpp  syntax_element_object.hpp
ampersand/extension/javascript/: class.hpp  class_definition.hpp
ampersand/extension/json/: CMakeLists.txt  reader.hpp  reader_impl.hpp  types.hpp  writer_impl.hpp
ampersand/extension/mysql/: CMakeLists.txt  body.hpp  body_impl.hpp  connection.cpp  connection.hpp  connection_base.cpp  connection_base.hpp  driver.cpp  driver.hpp  parser.hpp  parser_binary_impl.hpp  parser_impl.hpp  parser_insert.hpp  parser_insert_impl.hpp  parser_select.hpp  parser_select_impl.hpp  reader.hpp  reader_impl.hpp  reader_iterator.hpp  table.hpp  table_impl.hpp  types.hpp  types_annotation.hpp  writer.hpp
ampersand/meta/: CMakeLists.txt  action.hpp  annotation.hpp  attribute.hpp  basic_object.hpp  body_traits.hpp  condition.hpp  implement.hpp  meta.hpp  meta_function.hpp  meta_impl.hpp  meta_object.hpp  meta_object_base.hpp  meta_object_impl.hpp  meta_script.hpp  method.hpp  object.hpp  object_base.hpp  operator.hpp  operator_impl.hpp  operator_verb.hpp  raw.hpp  verb.hpp
ampersand/meta/body/: raw.hpp  raw_impl.hpp  tag.hpp  tag_impl.hpp  tuple.hpp  tuple_impl.hpp
ampersand/meta/details/: annotation.hpp  body_traits_impl.hpp  operator.hpp
ampersand/meta/utility/: contains.hpp  trait.hpp  trait_concept.hpp
ampersand/poly/: CMakeLists.txt  declare.cpp  declare.hpp  decoder.cpp  decoder.hpp  fetch.cpp  fetch.hpp  impl.hpp  instruction.cpp  instruction.hpp  instruction_verb.hpp  operand.cpp  operand.hpp  poly_any.cpp  poly_any.hpp  poly_binary.cpp  poly_binary.hpp  poly_interface.hpp  poly_interface_impl.hpp  poly_module.cpp  poly_module.hpp  poly_object.hpp  traits.hpp
ampersand/poly/machine/: format.cpp  format.hpp  format_category.hpp  instruction.cpp  instruction.hpp  instruction_verb.hpp  operand.cpp  operand.hpp
ampersand/poly/machine/format/: call.cpp  call.hpp  call_method.cpp  call_method.hpp  move.cpp  move.hpp  object.cpp  object.hpp  primitive_operator.cpp  primitive_operator.hpp
ampersand/poly/python/: CMakeLists.txt  desc_instruction.cpp  desc_instruction.hpp  describer.hpp  describer_unit.cpp  describer_unit.hpp
ampersand/poly/types/: floating_point.cpp  floating_point.hpp  integral.hpp  primitive.hpp
ampersand/proto/: CMakeLists.txt  annotation.hpp  annotation_traits.hpp  annotation_utility.hpp  any_address.hpp  body.hpp  body_impl.hpp  buffer.hpp  field.hpp  implement.hpp  proto.hpp  size.hpp
ampersand/proto/address/: any.hpp  v4.hpp
ampersand/schema/: CMakeLists.txt  condition.hpp  field.hpp  insert.hpp  row.hpp  schema.hpp  select.hpp  table.hpp  table_impl.hpp  type.hpp  type_annotation.hpp  type_traits.hpp
ampersand/schema/driver/: CMakeLists.txt  driver.c  driver.h  driver_type.h  schema_type.h
ampersand/schema/syntax/: insert.hpp  select.hpp
describe/: raw_field.hpp
example/diopter/: CMakeLists.txt  script.cpp  syntax.cpp  type.cpp
example/extension/json/: CMakeLists.txt  read.cpp  test.json
example/extension/mysql/: CMakeLists.txt  body.cpp  connection.cpp  connection.hpp  reader.cpp  select.cpp  select_parsed.cpp
example/meta/: CMakeLists.txt  attribute.cpp  body.cpp  field.cpp  field.hpp  main.cpp  meta.cpp  meta_operator.cpp  meta_script.cpp  meta_type.cpp  raw.hpp  raw_object.cpp
example/poly/: CMakeLists.txt  any.cpp
example/proto/: CMakeLists.txt  buffer_body.hpp  main.cpp  proto.cpp
example/schema/: CMakeLists.txt  schema.cpp  select.cpp  table.cpp
example/type_table/: CMakeLists.txt  main.cpp  pop.cpp  pop.hpp  push.cpp  push.hpp
meta/: attribute.hpp  field.hpp  field_utility.hpp  meta_type.hpp
poly_machine/: CMakeLists.txt  operand_type.h  symbol_init.c  symbol_init.h  symbol_manip.c  symbol_manip.h  symbol_type.h
rust/schema/src/: table.rs
type_table/: all.hpp  contains_of.hpp  pop.hpp  push.hpp  search.hpp  type_table.hpp
utility/: contains_of.hpp  index.hpp  total_size.hpp
